--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </section>
 
       <footer class="site-footer">
-        <p>© <span id="year"></span> Your Name. All rights reserved.</p>
+        <p>© <span id="year"></span> Haichao Wang. All rights reserved.</p>
       </footer>
     </main>
   </div>
