--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <meta name="theme-color" content="#f5f3f0" />
+  <meta name="theme-color" content="#fbfbfd" />
   <title>Haichao Wang — Academic Homepage</title>
   <meta name="description" content="Academic homepage of Haichao Wang" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -28,7 +28,7 @@
       <section id="about" class="card">
         <div class="card-content">
           <div class="identity">
-            <img src="assets/photo.jpg" alt="Portrait of Haichao Wang" class="avatar" width="160" height="160" loading="lazy" decoding="async" />
+            <img src="assets/photo.jpg" alt="Portrait of Haichao Wang" class="avatar" width="140" height="140" loading="lazy" decoding="async" />
             <div class="who">
               <h1>Haichao Wang</h1>
               <p class="tagline">Master Student<br>Tsinghua University</p>
