--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <a href="#" class="nav-brand">Haichao Wang</a>
       <div class="nav-links">
         <a href="#about">About</a>
+        <a href="#education">Education</a>
         <a href="#publications">Publications</a>
       </div>
     </div>
@@ -55,6 +56,14 @@
         </div>
         <noscript>
           <p class="muted">JavaScript is disabled; the About content from <code>content.md</code> cannot be loaded.</p>
+        </noscript>
+      </section>
+
+      <section id="education" class="card">
+        <h2>Education</h2>
+        <div id="edu-list" class="education-list"></div>
+        <noscript>
+          <p class="muted">JavaScript is disabled; education cannot be loaded.</p>
         </noscript>
       </section>
 
