--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <section id="about" class="card">
         <div class="card-content">
           <div class="identity">
-            <img src="assets/photo.jpg" alt="Portrait of Haichao Wang" class="avatar" width="140" height="140" loading="lazy" decoding="async" />
+            <img src="assets/name.jpeg" alt="Portrait of Haichao Wang" class="avatar" width="180" height="180" loading="lazy" decoding="async" />
             <div class="who">
               <h1>Haichao Wang</h1>
               <p class="tagline">Master Student<br>Tsinghua University</p>
