--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
           <div class="menu-item"><a href="#education">Education</a></div>
           <div class="menu-item"><a href="#publications">Publications</a></div>
           <div class="menu-category">Links</div>
-          <div class="menu-item"><a href="mailto:whc23@mails.tsinghua.edu.cn">Email</a></div>
+          <div class="menu-item"><a href="mailto:wanghc23@mails.tsinghua.edu.cn">Email</a></div>
           <div class="menu-item"><a href="https://github.com/hychao">GitHub</a></div>
-          <div class="menu-item"><a href="#">Google Scholar</a></div>
+          <div class="menu-item"><a href="https://scholar.google.com/citations?user=-exqY3gAAAAJ&hl=en">Google Scholar</a></div>
         </td>
 
         <!-- Main Content -->
